# hash-id

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
snap/: snapcraft.yaml
src/: algorithms.rs  lib.rs  main.rs
