[package]
name = "hash-id"
version = "0.1.1"
authors = ["Pedro Tashima <pedrotashima42@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Hash Identifying tool"
homepage = "https://github.com/tashima42/hash-id/"
repository = "https://github.com/tashima42/hash-id/"
documentation = "https://github.com/tashima42/hash-id/#readme"
readme = "README.md"

exclude = [
  "snap"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.7"
